# pdf-generator

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
docs/source/: conf.py  index.rst
examples/: example.py
src/pdf_generator/: generator.py
tests/test_pdf_generator/: test_generator.py
