[metadata]
name = pdf-generator
version = 0.0.1
license = Free license
description = TODO
long_description = file: README.rst
author = Albert Laiuste
author_email = albert.laiuste@gmail.com
classifiers=
    Development Status :: 1 - Planning
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src
