[metadata]
name = pdf-generator
version = 0.0.1
license = MIT
description = TODO
long_description = file: README.md
author = Albert Laiuste
author_email = albert.laiuste@gmail.com
classifiers=
    Development Status :: 1 - Planning
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    reportlab

[options.packages.find]
where=src
